# Numeral-System-Trasformation

./: .gitignore
Java/src/: Main.java
c++/: CMakeLists.txt  functions.h  main.cpp
js/: package-lock.json  package.json
js/src/: index.css  index.html  index.js  render.js
python/: functions.py  main.py
